--- a/FrontEnd/STYLE/login.css
+++ b/FrontEnd/STYLE/login.css
@@ -1,3 +1,13 @@
-.New{
-    font-size: larger;
+*{
+    padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+body{
+    background-size: cover;
+	background-position: absolute;
+	background-repeat: no-repeat;
+	font-family: sans-serif;
+	background-attachment: fixed;
 }
