--- a/FrontEnd/STYLE/login.css
+++ b/FrontEnd/STYLE/login.css
@@ -1,10 +1,10 @@
-*{
+* {
     padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
-body{
+body {
     background-size: cover;
 	background-position: absolute;
 	background-repeat: no-repeat;
@@ -18,8 +18,8 @@ body{
 	background: linear-gradient(to bottom, #87CEEB, #1E90FF);
 }
 
-.box{
-	width: 1450px;
+.box {
+	width: 1200px;
 	height: 700px;
 	background: black;
 	overflow: hidden;
@@ -27,25 +27,47 @@ body{
 	box-shadow: 5px 20px 50px #000;
 	padding: 0%;
 	display: grid;
- 	grid-template-columns: 2fr 1fr; /* Two equal-width columns */
-  	gap: 0.1px; /* Gap between columns */
+ 	grid-template-columns: 2.2fr 1fr; /* width columns */
+  	gap: 0.1px; /* Gap */
 
 }
 
-.halfL{
+.halfL {
 	flex: 1;
   	height: 100%;
 	background-color: rgba(0, 0, 0);
 }
 
-.halfR{
-	flex: 1;
+.halfR {
+	
   	height: 100%;
 	background-color: rgba(255, 255, 255);
 }
 
-.halfR h1{
+.halfR h1 {
 	text-align: center;
   	padding: 20px 0;
   	border-bottom: 1px solid silver;
 }
+
+.halfR input{
+	width: 60%;
+	padding: 0 5px;
+	height: 40px;
+	font-size: 16px;
+	border: 1px solid silver;
+	background: none;
+	outline: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.halfR label{
+	top: 50%;
+	left: 5px;
+	color: #adadad;
+	transform: translateY(-50%);
+	font-size: 16px;
+	pointer-events: none;
+}
+  
