--- a/FrontEnd/STYLE/login.css
+++ b/FrontEnd/STYLE/login.css
@@ -33,34 +33,155 @@ body {
 	content: "";
   	display: block;
   	position: absolute;
-  	z-index: -1;
+  	z-index:-1;
   	width: 100%;
   	height: 100%;
-  	top: 0;
+  	top: 0; 
   	left: 0;
   	background-color: rgba(255,255,255,0.4);
 }
 
 .box {
-	height: 670px;
-	width: 400px;
-  	border-radius: 14px;
+	height: 500px;
+	width: 398px;
+  	border-radius: 20px;
   	overflow: hidden;
-  	padding: 55px 55px 37px 55px;
+  	padding: 55px 55px 55px 45px;
   	background: #9152f8;
-  	background: -webkit-linear-gradient(top, #7579ff, #b224ef);
-  	background: -o-linear-gradient(top, #7579ff, #b224ef);
-  	background: -moz-linear-gradient(top, #7579ff, #b224ef);
-  	background: linear-gradient(top, #7579ff, #b224ef);
+  	background: linear-gradient(to top left, #00ffff 10%, #3366ff 80%);
 	box-shadow: 5px 5px 90px #000;
+	flex-direction: column;
+    justify-content: center; 
+    align-items: center;
 }
 
 .box h1 {
 	font-family: sans-serif;
-  	font-size: 30px;
+  	font-size: 32px;
   	color: #fff;
-  	line-height: 1.2;
   	text-align: center;
   	text-transform: uppercase;
-  	display: block;
+	border-bottom: 2px solid #ccc;
+	margin-bottom: 10px;
+	padding-right: 0%;
+}
+
+.input1 {
+  	width: 100%;
+  	height: 90px;
+  	padding: 40px 0px;
+	margin-bottom: 20px;
+}
+
+.input1 input {
+	font-family: sans-serif;
+	font-size: 18px;
+	display: inline-block;
+	box-sizing: border-box;
+	width: 300px;
+	height: 50px;
+	position: relative;
+	border-radius: 10px;
+	border: 0px solid #ccc;
+	box-shadow: inset 0.2px 0.2px 5px 0.8px;
+	text-indent: 10px;
+}
+
+.input2 {
+  	width: 100%;
+  	height: 90px;
+  	padding: 30px 0px;
+	margin-bottom: 20px;
+}
+
+.input2 input {
+	font-family: sans-serif;
+	font-size: 18px;
+	display: inline-block;
+	box-sizing: border-box;
+	width: 300px;
+	height: 50px;
+	position: relative;
+	border-radius: 10px;
+	border: 0px solid #ccc;
+	box-shadow: inset 0.2px 0.2px 5px 0.8px;
+	text-indent: 10px;
+}
+
+.checkbox label {
+	font-family: sans-serif;
+	font-size: 16px;
+	color: #2f2f2f;
+}
+
+.checkbox input:checked {
+	border: none;
+    outline: 2px solid deeppink;
+}
+
+.logreg {
+	display: flex;
+	justify-content: center;
+	padding-top: 20px;
+}
+ .c1 {
+	margin: 10px;
+ }
+
+.c1 button {
+	font-family: sans-serif;
+	font-size: 18px;
+	display: inline-block;
+  	padding: 15px 25px;
+  	font-size: 24px;
+  	cursor: pointer;
+  	text-align: center;
+  	text-decoration: none;
+  	outline: none;
+  	color: #fff;
+  	background-color: #E893CF;
+  	border: none;
+  	border-radius: 15px;
+  	box-shadow: 0 9px #999;
+ }
+
+.c1 button:hover {
+	background-color: #3e8e41
+}
+
+.c1 button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.c2 {
+	margin: 10px;
+}
+
+.c2 button {
+	font-family: sans-serif;
+	font-size: 18px;
+	display: inline-block;
+  	padding: 15px 10px;
+  	font-size: 24px;
+  	cursor: pointer;
+  	text-align: center;
+  	text-decoration: none;
+  	outline: none;
+  	color: #fff;
+  	background-color: #E893CF;
+  	border: none;
+  	border-radius: 15px;
+  	box-shadow: 0 9px #999;
+ }
+
+.c2 button:hover {
+	background-color: #3e8e41
+}
+
+.c2 button:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
 }
