--- a/FrontEnd/STYLE/register.css
+++ b/FrontEnd/STYLE/register.css
@@ -42,8 +42,8 @@ body {
 }
 
 .box {
-	height: 500px;
-	width: 398px;
+	height: 780px;
+	width: 680px;
   	border-radius: 20px;
   	overflow: hidden;
   	padding: 55px 55px 55px 45px;
@@ -58,7 +58,7 @@ body {
 .box h1 {
     font-size: 24px;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
   }
 
 .column {
@@ -67,15 +67,48 @@ body {
 
 .clm {
     flex: 1;
-    padding: 10px;
+    padding: 20px;
 }
 
 input[type=text], select {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 10px 20px;
+    margin: 12px 0;
     display: inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
+}
+
+.clm textarea.address-input {
+    width: 100%;
+    height: 115.5px;
+    resize: none;
+    vertical-align: top;
+    white-space: pre-wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 10px 20px;
+    margin: 12px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+	font-family: sans-serif;
+}
+
+.clm input.date {
+    width: 100%;
+    resize: none;
+    vertical-align: top;
+    white-space: pre-wrap;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 10px 20px;
+    margin: 12px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+	font-family: sans-serif;
+}
