--- a/FrontEnd/STYLE/register.css
+++ b/FrontEnd/STYLE/register.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -6,7 +8,8 @@
 
 body {
     height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	font-family: 'Montserrat', sans-serif;
+    color: darkgray;
 }
 
 .limiter {
@@ -42,13 +45,13 @@ body {
 }
 
 .box {
-	height: 780px;
-	width: 680px;
-  	border-radius: 20px;
+	height: 650px;
+	width: 800px;
+  	border-radius: 30px;
   	overflow: hidden;
   	padding: 55px 55px 55px 45px;
   	background: #9152f8;
-  	background: linear-gradient(to top left, #00ffff 10%, #3366ff 80%);
+  	background: linear-gradient(to top left, #19376D 10%, #0B2447 80%);
 	box-shadow: 5px 5px 90px #000;
 	flex-direction: column;
     justify-content: center; 
@@ -80,6 +83,16 @@ input[type=text], select {
     box-sizing: border-box;
 }
 
+input[type=password], select {
+    width: 100%;
+    padding: 10px 20px;
+    margin: 12px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
 .clm textarea.address-input {
     width: 100%;
     height: 115.5px;
@@ -94,7 +107,7 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .clm input.date {
@@ -110,5 +123,42 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.bc {
+    text-align: center;
+}
+
+.clm button.regis,
+.clm button.check {
+    width: 45%;
+    padding: 10px 20px;
+    margin: 12px 2%;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    cursor: pointer;
+  	text-align: center;
+  	text-decoration: none;
+  	outline: none;
+  	color: #fff;
+  	background-color: #576CBC;
+  	border: none;
+  	border-radius: 15px;
+  	box-shadow: 0 5px #595959;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.clm button.regis:hover,
+.clm button.check:hover {
+    background-color: #A5D7E8;
+    color: rgb(28, 28, 28);
+}
+
+.clm button:active {
+    background-color: #A5D7E8;
+    box-shadow: 0 2px #595959;
+    transform: translateY(3px);
 }
