--- a/FrontEnd/STYLE/login.css
+++ b/FrontEnd/STYLE/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
 * {
     padding: 0;
 	margin: 0;
@@ -6,7 +8,8 @@
 
 body {
 	height: 100%;
-	font-family: Poppins-Regular, sans-serif;
+	font-family: 'Montserrat', sans-serif;
+    color: darkgray;
 }
 
 .limiter {
@@ -48,7 +51,7 @@ body {
   	overflow: hidden;
   	padding: 55px 55px 55px 45px;
   	background: #9152f8;
-  	background: linear-gradient(to top left, #00ffff 10%, #3366ff 80%);
+  	background: linear-gradient(to top left, #A084E8 10%, #6F61C0 80%);
 	box-shadow: 5px 5px 90px #000;
 	flex-direction: column;
     justify-content: center; 
@@ -56,7 +59,7 @@ body {
 }
 
 .box h1 {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
   	font-size: 32px;
   	color: #fff;
   	text-align: center;
@@ -74,7 +77,7 @@ body {
 }
 
 .input1 input {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 	display: inline-block;
 	box-sizing: border-box;
@@ -95,7 +98,7 @@ body {
 }
 
 .input2 input {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 	display: inline-block;
 	box-sizing: border-box;
@@ -109,7 +112,7 @@ body {
 }
 
 .checkbox label {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 16px;
 	color: #2f2f2f;
 }
@@ -129,7 +132,7 @@ body {
  }
 
 .c1 button {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 	display: inline-block;
   	padding: 15px 25px;
@@ -138,8 +141,8 @@ body {
   	text-align: center;
   	text-decoration: none;
   	outline: none;
-  	color: #fff;
-  	background-color: #E893CF;
+  	color: #6F61C0;
+  	background-color: whitesmoke;
   	border: none;
   	border-radius: 15px;
   	box-shadow: 0 9px #999;
@@ -160,7 +163,7 @@ body {
 }
 
 .c2 button {
-	font-family: sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-size: 18px;
 	display: inline-block;
   	padding: 15px 10px;
@@ -169,8 +172,8 @@ body {
   	text-align: center;
   	text-decoration: none;
   	outline: none;
-  	color: #fff;
-  	background-color: #E893CF;
+  	color: #6F61C0;
+  	background-color: #D5FFE4;
   	border: none;
   	border-radius: 15px;
   	box-shadow: 0 9px #999;
